--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "author": "Scott Kennedy <scottyzen@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "HOST=0.0.0.0 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "nuxt": "^2.3.4",
     "nuxt-purgecss": "^0.0.2",
     "tailwindcss": "^0.7.2"
